--- a/google-emulator/index.html
+++ b/google-emulator/index.html
@@ -3,8 +3,19 @@
   <head>
     <title>Google Emulator</title>
     <meta charset="utf-8">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      iframe {
+        width: 100%;
+        height: calc(100vh - 50px);
+      }
+    </style>
   </head>
   <body>
+    <h1>Google Emulator</h1>
     <iframe src="https://www.google.com"></iframe>
   </body>
 </html>
